# mesh-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
lib/: CMakeLists.txt
res/: compile.py
res/shaders/: basic.frag  basic.vert
src/: global.cpp  global.hpp  main.cpp
src/gfx/: allocated_buffer.cpp  allocated_buffer.hpp  allocated_image.cpp  allocated_image.hpp  context.cpp  context.hpp  descriptors.cpp  descriptors.hpp  gfx.hpp  image.cpp  image.hpp  imgui_layer.cpp  imgui_layer.hpp  mesh.cpp  mesh.hpp  pipeline_builder.cpp  pipeline_builder.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  stb_impl.cpp  swapchain.cpp  swapchain.hpp  vma_impl.cpp  vulkan_utils.hpp
src/memory/: deletion_queue.cpp  deletion_queue.hpp
src/platform/: window.cpp  window.h
src/util/: camera.cpp  camera.hpp  error.cpp  error.hpp  std.hpp  util.hpp
